# netbox_zabbix_traffic

./: MANIFEST.in  README.md  pyproject.toml
deploy/netbox-docker/: plugin_requirements.txt
deploy/netbox-docker/configuration/: plugins.py
netbox_zabbix_traffic/: __init__.py  template_content.py  urls.py  zabbix.py
netbox_zabbix_traffic/api/: urls.py  views.py
netbox_zabbix_traffic/static/netbox_zabbix_traffic/: interface-graph.js
netbox_zabbix_traffic/templates/netbox_zabbix_traffic/inc/: interface_traffic_panel.html
