[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-zabbix-traffic"
version = "0.1.0"
description = "NetBox plugin for syncing interface traffic statistics from Zabbix."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nepal Telecom" }
]
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_zabbix_traffic*"]

[tool.setuptools.package-data]
netbox_zabbix_traffic = [
  "templates/**/*.html",
  "static/**/*"
]
